<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    tools:context=".GameActivity"
    tools:showIn="@layout/activity_game">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!-- Resto de la interfaz de usuario -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:scaleType="fitXY"
            android:src="@drawable/home2" />


        <RelativeLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    android:text="Rallies descargados:"/>

                <Spinner
                    android:id="@+id/spinner_rallies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:spinnerMode="dialog"/>

            </LinearLayout>

            <ScrollView
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/border_fb_login"
                android:layout_centerInParent="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/Gris_1"
                    android:padding="10dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/name_rally_game_screen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nombre"
                        android:textSize="30sp"
                        android:textAllCaps="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimaryDark"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        android:text="Descripción:"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        />

                    <TextView
                        android:id="@+id/description_rally_game_screen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        android:text="Petrocoins obtenidos:"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        />

                    <TextView
                        android:id="@+id/points_rally_game_screen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        android:text="Sitios:"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        />

                    <TextView
                        android:id="@+id/sites_rally_game_screen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimaryDark" />

                    <ImageView
                        android:id="@+id/iv_rally_game_screen"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/isla_loros"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimaryDark" />

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp">

                <Button
                    android:id="@+id/btnMap"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jugar"
                    android:background="@drawable/btn_inicio_shape"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>