<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_rally_no_descargado"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/id_rally_no_descargado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nombre_rally_sin_descargar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/boton_descargar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Azul_oscuro_1"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/boton_descargar"
            android:textColor="@color/Blanco"
            android:textSize="10sp" />

    </LinearLayout>

</LinearLayout>
