...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                facebook:com_facebook_confirm_logout="true"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_cont_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_inicio_shape"
                android:text="CONTINUAR"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
