...
    <string name="title_activity_informacion_rally">InformacionRally</string>


    <string name="app_name">Rally GeoAventura</string>
    <string name="facebook_app_id">1980820355330228</string>
    <string name="fb_login_protocol_scheme">fb1980820355330228</string>
    <string name="fb_log_in">INGRESAR CON FACEBOOK</string>
    <string name="fb_log_out">SALIR</string>
    <string name="error">Error</string>
    <string name="success">Inicio de sesión exitoso</string>
    <string name="cancelled">Cancelado inicio de sesión</string>
    <string name="permission_not_granted">No se ha podido iniciar sesión</string>
    <string name="ok">OK</string>
...
